# Agent-Rumble

./: .gitignore  AGENTS.md  Makefile  README.md  project-card-queue.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/: agent-project-card
.codex/environments/: environment.toml
backend/: README.md  pyproject.toml
backend/tests/: __init__.py  demo_bundle_payloads.py  rumble_payloads.py  test_dependency_policy.py
catalog/cards/: README.md
docs/: README.md  architecture.md  backlog.md  decisions.md  demo-script.md  development.md  open-decisions.md  project-stories.md  requirements.md  roadmap.md  submission-requirements.md  writing_guidelines.md
docs/design-docs/: README.md  frontend-design-system.md  frontend-experience.md  frontend-prototype.html  frontend-reference-research.md  frontend-screen-design.md  production-deployment.md  risks-and-mitigations.md  system-design.md
docs/exec-plans/: README.md
docs/specification/: 01-product-overview.md  02-classification-and-sources.md  03-repository-exploration-workflow.md  04-card-schema-and-outputs.md  05-system-behavior-and-quality.md  06-mvp-scope-and-evaluation.md  README.md
fixtures/: README.md
fixtures/rumble/: demo_bundle.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
plugins/agent-project-card/: SUBMISSION.md
project-cards/: project-card-queue.md
test-data/: README.md
tests/: test_dependency_policy.py
(+113 files in other folders)
